Update plate measurement related functionality