@@ -1,39 +1,42 @@
 package eu.openanalytics.phaedra.plateservice.service;
 
+import com.google.common.primitives.Longs;
+import eu.openanalytics.phaedra.measservice.dto.MeasurementDTO;
+import eu.openanalytics.phaedra.measurementservice.client.MeasurementServiceClient;
 import eu.openanalytics.phaedra.plateservice.model.PlateMeasurement;
 import eu.openanalytics.phaedra.plateservice.repository.PlateMeasurementRepository;
 import eu.openanalytics.phaedra.platservice.dto.PlateMeasurementDTO;
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
 public class PlateMeasurementService {
-    private static final ModelMapper modelMapper = new ModelMapper();
-
     private final PlateMeasurementRepository plateMeasurementRepository;
+    private final MeasurementServiceClient measurementServiceClient;
+    private final ModelMapper modelMapper;
 
-    public PlateMeasurementService(PlateMeasurementRepository plateMeasurementRepository) {
+    public PlateMeasurementService(PlateMeasurementRepository plateMeasurementRepository, MeasurementServiceClient measurementServiceClient, ModelMapper modelMapper) {
         this.plateMeasurementRepository = plateMeasurementRepository;
+        this.measurementServiceClient = measurementServiceClient;
+        this.modelMapper = modelMapper;
     }
 
     public PlateMeasurementDTO addPlateMeasurement(PlateMeasurementDTO plateMeasurementDTO) {
-        PlateMeasurement plateMeasurement = new PlateMeasurement();
-        modelMapper.typeMap(PlateMeasurementDTO.class, PlateMeasurement.class)
-                .map(plateMeasurementDTO, plateMeasurement);
-
+        PlateMeasurement plateMeasurement = modelMapper.map(plateMeasurementDTO);
         plateMeasurement = plateMeasurementRepository.save(plateMeasurement);
 
-        modelMapper.typeMap(PlateMeasurement.class, PlateMeasurementDTO.class)
-                .map(plateMeasurement, plateMeasurementDTO);
-        return plateMeasurementDTO;
+        return modelMapper.map(plateMeasurement);
     }
 
     public List<PlateMeasurementDTO> getPlateMeasurements(long plateId) {
         List<PlateMeasurement> result = plateMeasurementRepository.findByPlateId(plateId);
-        return result.stream().map(this::mapToPlateMeasurementDTO).collect(Collectors.toList());
+        Map<Long, PlateMeasurement> plateMeasurementByMeasurementId = result.stream().collect(Collectors.toMap(PlateMeasurement::getMeasurementId, pm -> pm));
+
+        List<MeasurementDTO> measurementDTOs = measurementServiceClient.getMeasurements(Longs.toArray(plateMeasurementByMeasurementId.keySet()));
+        return measurementDTOs.stream().map(mDTO -> modelMapper.map(plateMeasurementByMeasurementId.get(mDTO.getId()), mDTO)).toList();
     }
 
     public PlateMeasurementDTO getPlateMeasurementByMeasId(long plateId, long measId) {
@@ -42,28 +45,20 @@ public class PlateMeasurementService {
     }
 
     public PlateMeasurementDTO setActivePlateMeasurement(long plateId, long measId) {
-        PlateMeasurementDTO plateMeasurementDTO = new PlateMeasurementDTO();
-        List<PlateMeasurement> plateMeasurements = plateMeasurementRepository.findByPlateId(plateId);
-        plateMeasurements.stream()
+        plateMeasurementRepository.findByPlateId(plateId).stream()
                 .filter(pm -> pm.getPlateId().equals(plateId) && pm.getActive() == true)
                 .forEach(pm -> {
                     pm.setActive(false);
                     plateMeasurementRepository.save(pm);
                 });
 
-        plateMeasurements.stream()
-                .filter(pm -> pm.getPlateId().equals(plateId) && pm.getMeasurementId().equals(measId))
-                .findFirst()
-                .ifPresent(pm -> {
-                    pm.setActive(true);
-                    plateMeasurementRepository.save(pm);
-                    modelMapper.typeMap(PlateMeasurement.class, PlateMeasurementDTO.class)
-                            .map(pm, plateMeasurementDTO);
-                });
-        return plateMeasurementDTO;
+        PlateMeasurement plateMeasurement = plateMeasurementRepository.findByPlateIdAndMeasurementId(plateId, measId);
+        plateMeasurement.setActive(true);
+
+        return modelMapper.map(plateMeasurementRepository.save(plateMeasurement));
     }
 
     private PlateMeasurementDTO mapToPlateMeasurementDTO(PlateMeasurement plateMeasurement) {
-        return modelMapper.map(plateMeasurement, PlateMeasurementDTO.class);
+        return modelMapper.map(plateMeasurement);
     }
 }
